fixed text wrap issue on paragraph

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,7 @@ img{
 }
 .body-container p{
     font-weight: 400;
+    white-space: pre-wrap;
 }
 
 .navigation a:hover{
